fixed z-index

--- a/public/global.css
+++ b/public/global.css
@@ -100,6 +100,7 @@ section, nav, footer, figure, caption {
 	background-size: cover;
 	margin: 0;
 	padding: 0;
+	z-index: -10;
 }
 
 .centered {
